; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/isci/extr_host.c_isci_host_start.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/isci/extr_host.c_isci_host_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Scsi_Host = type { i32 }
%struct.isci_host = type { i32, i32 }
%struct.TYPE_2__ = type { %struct.isci_host* }

@IHOST_START_PENDING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @isci_host_start(%struct.Scsi_Host* %0) #0 {
  %2 = alloca %struct.Scsi_Host*, align 8
  %3 = alloca %struct.isci_host*, align 8
  %4 = alloca i64, align 8
  store %struct.Scsi_Host* %0, %struct.Scsi_Host** %2, align 8
  %5 = load %struct.Scsi_Host*, %struct.Scsi_Host** %2, align 8
  %6 = call %struct.TYPE_2__* @SHOST_TO_SAS_HA(%struct.Scsi_Host* %5)
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.isci_host*, %struct.isci_host** %7, align 8
  store %struct.isci_host* %8, %struct.isci_host** %3, align 8
  %9 = load %struct.isci_host*, %struct.isci_host** %3, align 8
  %10 = call i64 @sci_controller_get_suggested_start_timeout(%struct.isci_host* %9)
  store i64 %10, i64* %4, align 8
  %11 = load i32, i32* @IHOST_START_PENDING, align 4
  %12 = load %struct.isci_host*, %struct.isci_host** %3, align 8
  %13 = getelementptr inbounds %struct.isci_host, %struct.isci_host* %12, i32 0, i32 1
  %14 = call i32 @set_bit(i32 %11, i32* %13)
  %15 = load %struct.isci_host*, %struct.isci_host** %3, align 8
  %16 = getelementptr inbounds %struct.isci_host, %struct.isci_host* %15, i32 0, i32 0
  %17 = call i32 @spin_lock_irq(i32* %16)
  %18 = load %struct.isci_host*, %struct.isci_host** %3, align 8
  %19 = load i64, i64* %4, align 8
  %20 = call i32 @sci_controller_start(%struct.isci_host* %18, i64 %19)
  %21 = load %struct.isci_host*, %struct.isci_host** %3, align 8
  %22 = call i32 @sci_controller_enable_interrupts(%struct.isci_host* %21)
  %23 = load %struct.isci_host*, %struct.isci_host** %3, align 8
  %24 = getelementptr inbounds %struct.isci_host, %struct.isci_host* %23, i32 0, i32 0
  %25 = call i32 @spin_unlock_irq(i32* %24)
  ret void
}

declare dso_local %struct.TYPE_2__* @SHOST_TO_SAS_HA(%struct.Scsi_Host*) #1

declare dso_local i64 @sci_controller_get_suggested_start_timeout(%struct.isci_host*) #1

declare dso_local i32 @set_bit(i32, i32*) #1

declare dso_local i32 @spin_lock_irq(i32*) #1

declare dso_local i32 @sci_controller_start(%struct.isci_host*, i64) #1

declare dso_local i32 @sci_controller_enable_interrupts(%struct.isci_host*) #1

declare dso_local i32 @spin_unlock_irq(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
